# devbox-setup

./: .ansible-lint  .gitattributes  .gitignore  .yamllint.yml  CLAUDE.md  Makefile  README.md  ansible.cfg  conversation.md  conversation_analysis.md  init.sh  inventory.yaml  pyproject.toml  requirements.txt  requirements.yml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: brew-audit.yml  ci.yml
claude_improvements/: 00-MoC.md  01-symptoms-inventory.md  02-external-research.md  03-current-config-map.md  04-reflection-evidence.md  10-root-causes-overview.md  20-consolidation-plan.md  30-evals-plan.md  README.md  _writer-instructions.md  rc-01-rlhf-pushback-loop.md  rc-02-helpfulness-as-artefact.md  rc-03-verbosity-task-complexity.md  rc-04-tokenizer-densification.md  rc-05-tool-calling-preference-drop.md  rc-06-no-working-memory.md  rc-07-asymmetric-ask-vs-guess.md  rc-08-sycophantic-gap-filling.md  rc-09-long-context-soft-cliff.md  rc-10-compaction-derailment.md  rc-11-claude-md-attention-budget.md  rc-12-no-platform-brevity-cap.md  rc-13-claude-md-bloat.md  rc-14-inter-asset-conflicts.md  rc-15-engineering-attitude-skill-missing.md  rc-16-no-facts-list-scaffold.md  rc-17-advisory-only-rules.md  rc-18-permission-allowlist-drift.md  rc-19-skill-invocation-advisory.md  rc-20-waterfall-pipeline.md  rc-21-monolithic-and-duplicate-outputs.md  rc-22-manual-dispatch-no-roadmap.md  rc-23-role-boundary-violations.md  rc-24-done-without-verification.md  rc-25-citation-not-enforced.md  rc-26-no-bullshit-detector.md  rc-27-output-ordering-not-preserved.md  rc-28-lint-test-output-flood.md  rc-29-no-master-pull-protocol.md  rc-30-coauthor-trailer-leak.md  (+2 more)
claude_improvements/.obsidian/: workspace.json
claude_improvements/FPF_seminar/: 11-fpf-diagnostic-ru.md  11-fpf-diagnostic.md  choosing_name-ru.md  choosing_name.md  choosing_name_with_fpf_48-ru.md  choosing_name_with_fpf_48.md  seminar_timeline.md
claude_improvements/FPF_seminar/12-llm-agent-quality-dpf/: 12-00-spine-ru.md  12-00-spine.md  12-01-source-pack-ru.md  12-01-source-pack.md  12-02-measurement-frame-ru.md  12-02-measurement-frame.md  12-10-patterns-A-ru.md  12-10-patterns-A.md  12-11-patterns-B-ru.md  12-11-patterns-B.md  12-12-patterns-C-ru.md  12-12-patterns-C.md  12-13-patterns-D-ru.md  12-13-patterns-D.md  12-14-patterns-E-ru.md  12-14-patterns-E.md  12-15-patterns-F-ru.md  12-15-patterns-F.md  12-20-local-practice-edition-ru.md  12-20-local-practice-edition.md  PROGRESS.md  README.md
claude_improvements/FPF_seminar/12-llm-agent-quality-dpf/_inputs/: rc-digest.md
future_projects/: git-push-policy.md  jamf_work_machine_debug.md  spec-workflow-redesign-proposal.md  ubuntu_dotfiles_os_gating.md  work-bureaucrat-agent.md  workbench_decomposition_wip.md
playbooks/: claude.yml  dotfiles.yml  local.yml  macos.yml  main.yml  mcp.yml  shell.yml
profiles/: personal.yml  work.yml
roles/devbox/defaults/: main.yml
roles/devbox/defaults/main/: claude.yml  core.yml  macos_defaults.yml  packages.yml  shell.yml
roles/devbox/files/: .bashrc.j2  .gemrc  .gemrc.j2  .npmrc  .npmrc.j2  README.md  WORKSPACE.md.j2  claude_desktop_config.json.j2
roles/devbox/files/.claude/: CLAUDE.md  README.md  config.md  hooks.json  pyrightconfig.json  settings.json  settings.json.j2
roles/devbox/files/.claude/agents/: agent_builder.md  api_designer.md  architect.md  build_resolver_go.md  code_reviewer.md  code_reviewer_frontend.md  code_reviewer_go.md  code_reviewer_python.md  consistency_checker.md  content_reviewer.md  database_designer.md  database_reviewer.md  designer.md  doc_updater.md  domain_expert.md  domain_modeller.md  freshness_auditor.md  implementation_planner_go.md  implementation_planner_python.md  implementation_planner_python_monolith.md  integration_tests_writer_go.md  integration_tests_writer_python.md  meta_reviewer.md  observability_engineer.md  philosophy.md  refactor_cleaner.md  skill_builder.md  software_engineer_frontend.md  software_engineer_go.md  software_engineer_python.md  tdd_guide.md  (+5 more)
roles/devbox/files/.config/aerospace/layouts/: README.md  pyproject.toml
roles/devbox/files/.config/aerospace/layouts/src/aerospace_layouts/: __init__.py  aerospace.py  cli.py  diagnostics.py  executor.py  geometry.py  model.py  ordering.py  planner.py  state.py
roles/devbox/files/.config/aerospace/layouts/src/aerospace_layouts/layouts/: __init__.py  columns.py  fair.py  floating.py  maxx.py  tile.py
roles/devbox/files/.config/aerospace/layouts/tests/: conftest.py  test_argv_boundary.py  test_cli_flatten.py  test_diagnostics.py  test_eval_executor.py  test_fair.py  test_geometry.py  test_live_smoke.py  test_maxx_columns_floating.py  test_ordering.py  test_planner_state.py  test_tile.py
roles/devbox/files/.hammerspoon/: init.lua
roles/devbox/files/dot_claude/: README.md  USER_AUTHORITY_PROTOCOL.md  config.md  hooks.json  settings.json
roles/devbox/files/fish/: config.fish
roles/devbox/files/kitty/: kitty.conf
roles/devbox/handlers/: main.yml
roles/devbox/tasks/: apply_configs.yml  ensure_workspace_marker.yml  install_configs.yml  main.yml  main_darwin.yml  main_linux.yml  prepare_user.yml  sanitize_gitconfig.yml
roles/devbox/tasks/darwin/: configure_betterdisplay.yml  configure_login_items.yml  configure_macos_basics.yml  configure_macos_defaults.yml  configure_spotlight_hotkeys.yml  configure_ssh_keychain.yml  dequarantine_casks.yml  finalize_brew.yml  install_from_appstore.yml  install_from_brew_initial.yml  install_from_brew_primary.yml  install_from_brew_secondary.yml  install_from_go.yml  install_from_uv.yml  install_kubectl.yml
roles/devbox/templates/: vault.yml.j2
scripts/: apply_w2_frontmatter.py  claude-pull-review  ensure_secrets.sh  git-identity-gen.py  git-identity-gen.sh  init.sh  keychain-become-pass.sh  vault-init.sh  with_sudo_keepalive.sh
tests/: vault.yml
tests/deploy/: test_install_configs.py
tests/git_hooks/: test_prepare_commit_msg.py
tests/scripts/: test_apply_w2_frontmatter.py  test_git_identity_gen.py
vault/: devbox_ssh_config.yml.tpl
(+427 files in other folders)
